@@ -599,4 +599,44 @@ class TestCase::Sys::Socket {
     
     return 1;
   }
+
+  static method listen : int ($port : int) {
+    # Socket
+    my $socket = Sys::Socket->socket(Socket->AF_INET, Socket->SOCK_STREAM, 0);
+    
+    unless ($socket> 0) {
+      return 0;
+    }
+
+    # Close socket at the end of this scope
+    my $socket_auto_close = TestUtil::SocketAutoClose->new($socket);
+    
+    # IPv4 address
+    my $address = Sys::Socket::Sockaddr::In->new;
+    $address->set_sin_family((byte)Socket->AF_INET);
+    $address->set_sin_port(Sys::Socket->htons((short)$port));
+    my $sin_addr = $address->sin_addr;
+    $sin_addr->set_s_addr(Sys::Socket->htonl(Socket->INADDR_ANY));
+    $address->set_sin_addr($sin_addr);
+    
+    my $status_setsockopt_int = Sys::Socket->setsockopt_int($socket, Socket->SOL_SOCKET, Socket->SO_REUSEADDR, 1);
+    
+    unless ($status_setsockopt_int == 0) {
+      return 0;
+    }
+    
+    my $status_bind = Sys::Socket->bind($socket, $address, $address->sizeof);
+    
+    unless ($status_bind == 0) {
+      return 0;
+    }
+
+    my $status_listen = Sys::Socket->listen($socket, Socket->SOMAXCONN);
+    
+    unless ($status_listen == 0) {
+      return 0;
+    }
+    
+    return 1;
+  }
 }
